Revision history for JSON-RPC2

{{$NEXT}}

v2.1.0  2016-02-17 22:52:43 EET
	- Switch from JSON::XS to JSON::MaybeXS. Thanks Scott Miller.

v2.0.0  2016-02-17 21:21:25 EET
	- Switch to Dist::Milla.

1.0.0   2014-06-22 09:11:25 EEST
	- Added Batch support.

0.4.0   2014-06-21 14:31:30 EEST
	- Now execute() will run callback with empty string after notifications.

0.3.1   2014-06-20 11:39:47 EEST
	- Improve doc.

0.3.0   2014-06-18 01:15:11 EEST
	- Add support for processing already decoded JSON.

0.2.1   2013-11-11 06:20:05 EET
	- Fix requirements.

0.2.0   2013-11-09 03:43:05 EET
	- Add notify_named(), call_named(), register_named(), register_named_nb().
	- Fix response() for cancel()ed calls when user keeps $call.
	- Croak when methods called with wrong params.
	- Add more tests.

0.1.2   2013-10-03 17:04:30 EEST
	- Remove MYMETA.*

0.1.1	2012-05-13 06:01:33 EEST
	- Fix requirements.

0.1.0	2009-07-08 10:16:54 EEST
	- Initial release.